--- a/src/grid-layout.html
+++ b/src/grid-layout.html
@@ -202,6 +202,7 @@ function detectPaste(textarea, callback) {
  **/
 $(document).ready(function() {
   classroom = new Classroom();
+  loadClassroomFromLocalStorage(classroom);
   loadTable(classroom);
 
   $(document).on('click', ".remove", function(e) {
@@ -305,4 +306,13 @@ $(document).ready(function() {
   });
 
 });
+
+function loadClassroomFromLocalStorage(classroom) {
+  var json_classroom = JSON.parse(localStorage.getItem('stored_classroom'));
+  var student_list = json_classroom.studentList;
+  for (var s = 0; s < student_list.length; s++) {
+    classroom.setStudent(s, student_list[s]);
+  }
+}
+
 </script>
