Longer headings based on feedback.

--- a/src/grid-layout.html
+++ b/src/grid-layout.html
@@ -32,9 +32,9 @@
 <table class="classroom">
 <thead>
 <tr>
-  <th>student</th>
-  <th>prefer</th>
-  <th>avoid</th>
+  <th>Student</th>
+  <th>Wants to join</th>
+  <th>Wants to avoid</th>
   <th></th>
 </tr>
 </thead>
