--- a/src/group-view.html
+++ b/src/group-view.html
@@ -14,14 +14,14 @@
 <svg></svg>
 
 <div class="sidebar">
-<div style="position: relative; text-align: center; margin: 20px 0 " >
+<div style="position: relative; text-align: center; margin: 20px 0; height:150px; " >
 <img src="our_logo.png" width=150 >
 <div style="position: absolute; bottom: 15px; left:0 ; right: 0; text-align: center; color: white; font-size: 20px ">group'em</div>
 </div>
 <div id='cssmenu'>
 <ul>
-   <li class='active' ><a href='#'><span>Creation</span></a></li>
-   <li class='last'><a href='#'><span>Groups</span></a></li>
+   <li class='last' ><a href='grid-layout.html'><span>Creation</span></a></li>
+   <li class='active'><a href='#'><span>Groups</span></a></li>
 </ul>
 </div>
 </div>
