--- a/test/classroom-test.html
+++ b/test/classroom-test.html
@@ -1,6 +1,6 @@
-<script src="lodash.js"></script>
-<script src="jquery-1.12.2.js"></script>
-<script src="classroom.js"></script>
+<script src="../external_js/lodash.js"></script>
+<script src="../external_js/jquery-1.12.2.js"></script>
+<script src="../src/classroom.js"></script>
 <script>
 
 function assert(b) {
