--- a/test/grouping-test.html
+++ b/test/grouping-test.html
@@ -1,9 +1,9 @@
-<script src="lodash.js"></script>
-<script src="jquery-1.12.2.js"></script>
-<script src="classroom.js"></script>
-<script src="student.js"></script>
-<script src="group.js"></script>
-<script src="grouping.js"></script>
+<script src="../external_js/lodash.js"></script>
+<script src="../external_js/jquery-1.12.2.js"></script>
+<script src="../src/student.js"></script>
+<script src="../src/group.js"></script>
+<script src="../src/grouping.js"></script>
+<script src="../src/classroom.js"></script>
 <script>
 
 function assert(b) {
