--- a/src/grid-layout.html
+++ b/src/grid-layout.html
@@ -1,12 +1,12 @@
 <meta charset='utf-8'>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="../external_js/lodash.js"></script>
+<script src="../external_js/jquery-1.12.2.js"></script>
+<script src="../external_js/jquery-ui.js"></script>
+<script src="../src/classroom.js"></script>
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="main-layout.css">
-<script src="lodash.js"></script>
-<script src="jquery-1.12.2.js"></script>
-<script src="jquery-ui.js"></script>
-<script src="classroom.js"></script>
 <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Cabin:400,700'>
 <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
 <link rel='stylesheet' href="grid-layout.css">
