--- a/test/student-test.html
+++ b/test/student-test.html
@@ -1,6 +1,6 @@
-<script src="lodash.js"></script>
-<script src="jquery-1.12.2.js"></script>
-<script src="student.js"></script>
+<script src="../external_js/lodash.js"></script>
+<script src="../external_js/jquery-1.12.2.js"></script>
+<script src="../src/student.js"></script>
 <script>
 
 assert = function(b, errorMessage) {
