added image folder to store images

--- a/src/grid-layout.html
+++ b/src/grid-layout.html
@@ -14,13 +14,13 @@
 <body>
 
 <div class="sidebar">
-<div style="position: relative; text-align: center; margin: 20px 0; height:150px; " >
-<img src="our_logo.png" width=150 >
+<div style="position: relative; text-align: center; margin: 20px 0; height:150px; ">
+<img src="../images/logo.png" width=150 >
 <div style="position: absolute; bottom: 15px; left:0 ; right: 0; text-align: center; color: white; font-size: 20px ">group'em</div>
 </div>
 <div id='cssmenu'>
 <ul>
-   <li class='active' ><a href='#'><span>Creation</span></a></li>
+   <li class='active'><a href='#'><span>Creation</span></a></li>
    <li class='last'><a href='group-view.html'><span>Groups</span></a></li>
 </ul>
 </div>
