--- a/src/group-view.html
+++ b/src/group-view.html
@@ -15,7 +15,7 @@
 
 <div class="sidebar">
 <div style="position: relative; text-align: center; margin: 20px 0; height:150px; " >
-<img src="our_logo.png" width=150 >
+<img src="../images/logo.png" width=150 >
 <div style="position: absolute; bottom: 15px; left:0 ; right: 0; text-align: center; color: white; font-size: 20px ">group'em</div>
 </div>
 <div id='cssmenu'>
