--- a/src/grid-layout.html
+++ b/src/grid-layout.html
@@ -215,39 +215,18 @@ $(document).ready(function() {
     var removedata = $(this).attr('id').split("*#95f%:");
     var sid = removedata[1];
     var removal_name = removedata[0];
-    // TODO: this should be a method on the classroom object
-    for (var  i = 0; i < classroom.getStudentCount(); i++) {
-      if (classroom.getStudent(i).sid == sid) {
-        for (var j = 0; j < classroom.getStudent(i).prefer.length; j++) {
-          if (classroom.getStudent(i).prefer[j] == removal_name ) {
-            classroom.getStudent(i).prefer.splice(j, 1);
-            $(classroom).trigger({type:'changestudents'});
-            loadTable(classroom);
-          }
-        }
-      }
-    }
+    var target_student = classroom.getStudentFromSID(sid);
+    classroom.removePreference(target_student.name, removal_name, "prefer");
   });
 
   $(document).on('click', ".removeavoid", function(e) {
     var removedata = $(this).attr('id').split("*#95f%:");
     var sid = removedata[1];
     var removal_name = removedata[0];
-    // TODO: this should be a method on the classroom object
-    for (var  i = 0; i < classroom.getStudentCount(); i++) {
-      if (classroom.getStudent(i).sid == sid) {
-        for (var j = 0; j < classroom.getStudent(i).avoid.length; j++) {
-          if (classroom.getStudent(i).avoid[j] == removal_name ) {
-            classroom.getStudent(i).avoid.splice(j, 1);
-            $(classroom).trigger({type:'changestudents'});
-            loadTable(classroom);
-          }
-        }
-      }
-    }
+    var target_student = classroom.getStudentFromSID(sid);
+    classroom.removePreference(target_student.name, removal_name, "prefer");
   });
 
-  // $(document).on('click', "#groupem", parseStudentList());
 
   $(document).on('keyup', "#newstudentbox", function(e) {
     if (e.which == 13) {
