--- a/src/group-view.html
+++ b/src/group-view.html
@@ -14,9 +14,8 @@
 <svg></svg>
 
 <div class="sidebar">
-<div style="position: relative; text-align: center; margin: 20px 0; height:150px; " >
-<img src="../images/logo.png" width=150 >
-<div style="position: absolute; bottom: 15px; left:0 ; right: 0; text-align: center; color: white; font-size: 20px ">group'em</div>
+<div style="position: relative; text-align: center; margin: 30px 0; height:150px; " >
+<img src="../images/logo_1.png" width=180>
 </div>
 <div id='cssmenu'>
 <ul>
