renamed HTML files to Table/Group view; added ability to rename classname dynamically; fixed bug where CSS where refering to 'school.png'

--- a/src/group-view.html
+++ b/src/group-view.html
@@ -4,10 +4,10 @@
 <meta charset='utf-8'>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="../src/sidebar.css">
 <link href='https://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
 <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-<link rel='stylesheet' href='cluster-layout.css'>
+<link rel='stylesheet' href='../src/group-view.css'>
 
 <body>
 
@@ -19,7 +19,7 @@
 </div>
 <div id='cssmenu'>
 <ul>
-   <li class='last' ><a href='grid-layout.html'><span>Creation</span></a></li>
+   <li class='last' ><a href='table-view.html'><span>Creation</span></a></li>
    <li class='active'><a href='#'><span>Groups</span></a></li>
 </ul>
 </div>
