--- a/src/table-view.html
+++ b/src/table-view.html
@@ -5,11 +5,10 @@
 <script src="../external_js/jquery-1.12.2.js"></script>
 <script src="../external_js/jquery-ui.js"></script>
 <script src="../src/classroom.js"></script>
-<link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="main-layout.css">
+<link rel="stylesheet" href="../src/sidebar.css">
 <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Cabin:400,700'>
 <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-<link rel='stylesheet' href="grid-layout.css">
+<link rel='stylesheet' href="../src/table-view.css">
 
 <body>
 
@@ -27,9 +26,13 @@
 </div>
 
 <div class="content">
-<h1> Class 2A Math </h1>
 <table class="classroom">
 <thead>
+<tr>
+<th id="classname_row" colspan="4">
+<input type="text" id="classname_input" placeholder="Enter Class Name"></input>
+</th>
+</tr>
 <tr>
   <th>Student</th>
   <th>Wants to join</th>
@@ -48,7 +51,9 @@ group'em
 </div>
 
 </body>
+
 <script>
+
 var parseStudentList = function() {
   var student_list = $("#newstudentbox").val();
   console.log(student_list);
@@ -110,8 +115,8 @@ var loadTable = function(classroom) {
 }
 
 function addRow(student) {
-  console.log("Hello");
-  console.log("---------ADD ROW ------");
+  
+  console.log("------ ADD ROW ------");
   var row = $('<tr>');
   var cell = $('<td class="student_name">').appendTo(row);
   var p = $('<p>').appendTo(cell)
