--- a/test/cluster-test.html
+++ b/test/cluster-test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset='utf-8'>
-<link rel="stylesheet" href="cluster-layout.css">
+<link rel="stylesheet" href="../src/group-view.css">
 <body>
 <svg>
 <g class="links"></g>
@@ -9,9 +9,9 @@
 </svg>
 <div>
 </div>
-<script src='d3.js'></script>
-<script src='jquery-1.12.2.js'></script>
-<script src='cluster-layout.js'></script>
+<script src='../external_js/d3.js'></script>
+<script src='../external_js/jquery-1.12.2.js'></script>
+<script src='../src/cluster-layout.js'></script>
 <script>
 var layout = new ClusterLayout('svg');
 layout.addNode(1, 'Alice');
